# dap

./: .gitignore  CHANGELOG.md  LICENSE  README.md  dap.cabal  default.nix  shell.nix
.github/workflows/: main.yml
src/: DAP.hs
src/DAP/: Adaptor.hs  Event.hs  Internal.hs  Log.hs  Response.hs  Server.hs  Types.hs  Utils.hs
test/: Main.hs
