name:               dap
version:            0.3.0.0
description:        A library for the Debug Adaptor Protocol (DAP)
synopsis:           A debug adaptor protocol library
bug-reports:        https://github.com/haskell-debugger/dap/issues
license:            BSD3
license-file:       LICENSE
author:             David Johnson, Csaba Hruska
maintainer:         code@dmj.io
copyright:          (c) 2025 David Johnson
category:           Debuggers, Language
build-type:         Simple
tested-with:        GHC==9.2.7
cabal-version:      >= 1.10

extra-source-files:
  CHANGELOG.md

library
  exposed-modules:
    DAP
    DAP.Adaptor
    DAP.Event
    DAP.Internal
    DAP.Response
    DAP.Server
    DAP.Types
    DAP.Utils
    DAP.Log
  build-depends:
    aeson                >= 2.0.3  && < 2.3,
    aeson-pretty         >= 0.8.9  && < 0.9,
    base                 < 5,
    bytestring           >= 0.11.4 && < 0.13,
    containers           >= 0.6.5  && < 0.8,
    lifted-base          >= 0.2.3  && < 0.3,
    monad-control        >= 1.0.3  && < 1.1,
    mtl                  >= 2.2.2  && < 2.4,
    network              >= 3.1.2  && < 3.3,
    network-simple       >= 0.4.5  && < 0.5,
    text                 >= 1.2.5  && < 2.2,
    time                 >= 1.11.1 && < 1.15,
    unordered-containers >= 0.2.19 && < 0.3,
    stm                  >= 2.5.0  && < 2.6,
    transformers-base    >= 0.4.6  && < 0.5,
    co-log-core          >= 0.3    && < 0.4
  ghc-options:
    -Wall
  hs-source-dirs:
    src
  default-language:
    Haskell2010

test-suite tests
  type:
    exitcode-stdio-1.0
  ghc-options:
    -Wall
  hs-source-dirs:
    test, src
  main-is:
    Main.hs
  other-modules:
    DAP.Response
    DAP.Internal
    DAP.Adaptor
    DAP.Server
    DAP.Types
    DAP.Event
    DAP.Utils
    DAP.Log
  build-depends:
      aeson
    , aeson-pretty
    , async              < 2.3
    , base               < 5
    , bytestring
    , containers
    , lifted-base
    , monad-control
    , hspec              < 2.12
    , mtl
    , network
    , network-simple
    , stm
    , string-conversions < 0.5
    , text
    , time
    , transformers-base
    , unordered-containers
    , co-log-core
  default-language:
    Haskell2010

source-repository head
  type: git
  location: https://github.com/haskell-debugger/dap.git
